# CocoaRAG

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
cocoarag/configs/: credits.yml  credits_template.yml  prompts.yml
cocoarag/dao/: base.py  documents.py  queries.py  users.py
cocoarag/db/: create_all_tables.py  create_document_table.py  create_emulated_langchain_init_tables.py  create_files_table.py
cocoarag/entities/: documents.py
cocoarag/interfaces/API/: api.py  conversations.py  documents.py  queries.py  users.py
cocoarag/interfaces/dummy/: main.py
cocoarag/models/: documents.py  filters.py  queries.py  query.py  users.py
cocoarag/prompts/: rag.py
cocoarag/runner/: __init__.py  runner.py  types.py
cocoarag/runner/tests/: correct_configs.yaml  incorrect_configs.yaml  test_runner.py
cocoarag/services/: add_chunks_service.py  add_document_service.py  agents.py  conversation.py  conversations.py  documents.py  facts.py  questions.py  rag.py  users.py  utils.py
cocoarag/use_cases/: documents.py  queries.py  users.py
data/: LSTM_notebook.ipynb  Story.txt  word_doc.docx
notebooks/: PGvector.ipynb  pydantic.ipynb
tests/: add_document.py  add_user.py  query.py
